[package]
name = "m3u8-2-mp3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
m3u8-rs = "5.0.3"
reqwest = "0.11.15"
rust-crypto = "0.2.36"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
